# RKVoice-TTS

./: .gitignore  README.md  pyproject.toml
config/examples/: board.local.env.example  delivery.local.env.example  tts_test_plan.example.json
docker/package-release/: Dockerfile
docker/toolkit2-profile/: Dockerfile
docs/architecture/: PaddleSpeech_RK3588_RKNN部署说明.md
docs/delivery/: 交付清单.md  发布手册.md  发布说明模板.md  回退手册.md  测试手册.md  部署手册.md  验收手册.md
docs/reports/: 免费商用离线TTS技术选型详细汇报报告.md
docs/requirements/: 项目指标.md  项目指标差距清单.md
scripts/board/: prepare_rknn_debug_bridge.py  set_board_static_ipv4.py
scripts/delivery/: __init__.py  asr.py  asr_rknn_export.py  cli.py  config.py  prepare_paddlespeech_tts_armlinux.py  remote.py  shared.py  tts.py
scripts/delivery/melotts_rknn2/: cli.py  config.py  remote.py  runtime_bundle.py  shared.py  source_bundle.py
scripts/delivery/paddlespeech_tts_armlinux/: __init__.py  cli.py  config.py  remote.py  runtime_bundle.py  shared.py  source_bundle.py
scripts/delivery/sherpa_onnx_rk3588/: __init__.py  cli.py  config.py  remote.py  runtime_bundle.py  source_bundle.py
scripts/delivery/templates/melotts_rknn2/runtime/: README_SDK.md  run_tts.sh  smoketest.sh
scripts/delivery/templates/melotts_rknn2/runtime/tools/: board_profile_capabilities.sh  (+2 more)
scripts/delivery/templates/paddlespeech_tts_armlinux/offline/: build-depends.sh  offline_build.sh  offline_env.sh  offline_run.sh  offline_smoketest.sh
scripts/delivery/templates/paddlespeech_tts_armlinux/runtime/: README_SDK.md  run_tts.sh  smoketest.sh
scripts/delivery/templates/paddlespeech_tts_armlinux/sdk/: CMakeLists.txt  rkvoice_tts_api.h  rkvoice_tts_core.cc  rkvoice_tts_demo_main.cc
scripts/delivery/templates/sherpa_onnx_rk3588/runtime/: README_SDK.md  run_asr.sh  run_tts.sh  smoketest.sh
scripts/release/: package_release.ps1  package_release.py  package_release_in_docker.py
scripts/testing/: rknn_toolkit2_profile.py  rknn_toolkit2_profile_in_docker.py  rkvoice_report.py  run_tts_test_suite.py
scripts/testing/report_static/: rkvoice-report.css
scripts/testing/report_templates/: rkvoice_report.html.j2
tests/: __init__.py  __main__.py  test_asr_rknn_export.py  test_package_release.py  test_package_release_docker.py  test_prepare_melotts_rknn2.py  test_prepare_paddlespeech_tts_armlinux.py  test_prepare_rknn_debug_bridge.py  test_prepare_sherpa_onnx_rk3588.py  test_rknn_toolkit2_profile.py  test_rknn_toolkit2_profile_docker.py  test_rkvoice_report.py  test_run_tts_test_suite.py  test_support.py
(+7 files in other folders)
